# daily_automation

./: .gitattributes  .gitignore  CUserslenovoAppDataLocalTempsize.txt  DailyAutomation.spec  README.md  Setup.spec  api_sources.py  app.py  app_paths.py  build.bat  build_config.spec  build_exe.spec  build_launcher.spec  check_exe.py  config.example.json  config.json  config_manager.py  daily_assistant.py  debug_config.py  gui_app.py  html_parser.py  installer.py  launcher.py  pack_release.py  password_crypto.py  projects.md  pyproject.toml  pytest.ini  releaseconfig_manager.py  requirements.txt  run_all_morning.bat  run_config_test.py  schedule.json  schedule_manager.py  setup_evening_only.bat  setup_task_scheduler.bat  setup_wake_timer.bat  test_build.bat  test_build.py  test_config.py  (+15 more)
build2/: Setup.spec
build_setup/: Setup.spec
data/: academic_briefing_20260406.md  academic_briefing_20260407.md  academic_briefing_20260408.md  academic_briefing_20260409.md  academic_briefing_20260410.md  academic_briefing_20260411.md  daily_plan_20260406.html  daily_plan_20260407.html  daily_plan_20260408.html  daily_plan_20260409.html  daily_plan_20260410.html  daily_plan_20260411.html
docs/: ARCHITECTURE.md  CODE_QUALITY_AND_MAINTENANCE.md  FRONTEND_ENTRYPOINTS.md  LINTING.md  REPOSITORY_HYGIENE.md
release/: README.md  app_paths.py  config.json  install.bat  install.bat.backup  install.bat.before_fix  run_all_morning.bat  run_daily.bat  run_schedule.bat  schedule_manager.py  weekly_tasks.json  课程任务管理系统_使用说明.txt
scheduler/: app.py  test.py  test_fetch.py
(+83 files in other folders)
